--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
     rel="stylesheet">
 
   <style>
-      html{
-        scroll-behavior: smooth;
-        overflow-x: hidden;
-      }
+    html {
+      scroll-behavior: smooth;
+      overflow-x: hidden;
+    }
+
+    button {
+      user-select: none;
+      -webkit-user-select: none;
+    }
+
+    img {
+      user-select: none;
+      -webkit-user-select: none;
+    }
   </style>
 </head>
 
