--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     rel="stylesheet">
 
   <style>
+    body{
+      overflow-x: hidden;
+    }
     html {
       scroll-behavior: smooth;
-      overflow-x: hidden;
+     
     }
 
     button {
